--- a/packages/react/src/internal/components/UnderlineTabbedInterface.module.css
+++ b/packages/react/src/internal/components/UnderlineTabbedInterface.module.css
@@ -61,6 +61,7 @@
   border-radius: var(--borderRadius-medium, var(--borderRadius-small));
   max-width: 100%;
   margin-bottom: var(--base-size-8);
+  height: 32px;
 
   /* button resets */
   appearance: none;
